allow images in module templates
Use a custom CommonMark renderer to map image and link URLs in Markdown to our virtual static path.

Also replace <h#> demoting from the previous commit with a simpler and more accurate routine in the new custom renderer.

see #63

--- a/templates/question.html
+++ b/templates/question.html
@@ -19,6 +19,10 @@ Next Question: {{q.spec.title}}
 #question-prompt {
   margin: 20px 0;
 }
+  #question img {
+    display: block; /* so that horizontal auto margin centers */
+    margin: 30px auto;
+  }
 {% endif %}
 
 </style>
