rename Home page to My Projects

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@ Home
 {% endblock %}
 
 {% block body %}
-<h1 style="margin: 1em 0">Home</h1>
+<h1 style="margin: 1em 0">My Projects</h1>
 
 <div style="margin: 2em 0">
 <p>You can continue working on a project you have already started or start a new one.</p>
