--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">GovReady Q</a>
+          <a class="navbar-brand" href="/about">GovReady Q</a>
         </div>
 
         <div class="collapse navbar-collapse">
