Standardize alingment and min-height. Closes #71. Closes #72.

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,9 @@
 {% endblock %}
 
 {% block body %}
+<div class="row">
+  <div class="col-sm-push-2 col-sm-8">
+
 <h1 style="margin: 1em 0 0 0">GovReady Q</h1>
 
 <div style="margin: 2em 0">
@@ -22,6 +25,8 @@
 
 </div>
 
+</div>
+</div>
 
 {% endblock %}
 
