--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,9 @@ Home
 {% endblock %}
 
 {% block body %}
+<div class="row">
+  <div class="col-sm-push-2 col-sm-8">
+    
 <h1 style="margin: 1em 0">My Projects</h1>
 
 <div style="margin: 2em 0">
@@ -53,4 +56,6 @@ Home
 </div>
 {% endfor %}
 
+  </div>
+</div>
 {% endblock %}
