--- a/templates/project.html
+++ b/templates/project.html
@@ -57,6 +57,9 @@
 {% endblock %}
 
 {% block body %}
+<div class="row">
+  <div class="col-sm-push-2 col-sm-8">
+
 <h1 style="margin: 1em 0 0 0">{{title}}</h1>
 
 <div style="margin: 2em 0">
@@ -215,6 +218,8 @@
   </div>
 </div>
 
+  </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
