Standardize new-question width

--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -6,6 +6,9 @@ New Project
 {% endblock %}
 
 {% block body %}
+<div class="row">
+  <div class="col-sm-push-2 col-sm-8">
+
 <h1 style="margin: 60px 0 30px 0">New Project</h1>
 
 <div style="margin: 30px 0">
@@ -24,6 +27,8 @@ New Project
     </div>
 </form>
 
+  </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
