--- a/templates/project.html
+++ b/templates/project.html
@@ -22,9 +22,11 @@
   background-color: #fff;
   padding: .75em .9em;
   width: 180px;
-  height: 150px;
-  max-height: 150px;
+  height: 140px;
+  max-height: 140px;
   position: relative;
+  overflow: scroll;
+  margin: 12px 12px 0px 0px;
 }
   .task .task-title {
     /*margin-bottom: 1em;*/
