drop introduction ("/start") pages and instead treat 'introduction's as an implicit interstitial question that every other question depends on
This simplifies a lot of code that had to choose whether or not to go to the task start page or to a task question. Those links all now go to task questions.

The 'introduction' on projects is now converted into an implicit interstitial question and an ask-first dependency is added to all other questions so that it is necessarily asked first. This occurs in the load_modules management command.

The introduction page had two nav links, one to invite someone else to take over (this is on question pages too) and another one to return a task to the person who invited the user (which is nowhere else).

fixes #78

--- a/templates/project.html
+++ b/templates/project.html
@@ -143,20 +143,19 @@
                     {% if is_member %}
                       {% for t in rec.tasks %}
                         <div>
-                          <!-- <a href="{{t.get_absolute_url}}{% if not t.is_started %}/start {% endif %}"> -->
                             {% if rec.question.spec.type == "module-set" %}
                               {{t.render_title}} &mdash;
                             {% endif %}
                             {% if t.is_finished or not t.has_write_priv %}
-                              <a href="{{t.get_absolute_url}}{% if not t.is_started %}/start {% endif %}">
+                              <a href="{{t.get_absolute_url}}">
                                 <span class="glyphicon glyphicon-check"></span>
                                 Completed </a>
                             {% elif t.is_started %}
-                              <a href="{{t.get_absolute_url}}{% if not t.is_started %}/start {% endif %}">
+                              <a href="{{t.get_absolute_url}}">
                                 <span class="glyphicon glyphicon-edit"></span>
                               In Progress </a>
                             {% else %}
-                              <a href="{{t.get_absolute_url}}{% if not t.is_started %}/start {% endif %}">
+                              <a href="{{t.get_absolute_url}}">
                               <span class="glyphicon glyphicon-edit"></span>
                               Viewed </a>
                             {% endif %}
