fix 11b06b6a, incorrect detection if a project question is finished
For module-type questions, the question is finished just when it is answered by a task that is finished.

For module-set questions, the question is finished just when it is answered at least once and all of the tasks that answer it are finished.

--- a/templates/project.html
+++ b/templates/project.html
@@ -133,7 +133,7 @@
                 {% endif %}
 
                 <div class="col-sm-3">
-                <div class="task {% if is_member %}{% for t in rec.tasks %}{% if t.is_finished %}task_finished{% endif %}{% endfor %}{% endif %}">
+                <div class="task {% if is_member and rec.is_finished %}task_finished{% endif %}">
 
                   <div class="task-title">
                     {{rec.question.spec.title}}
