fix text / simplify html on project page task links/status

--- a/templates/project.html
+++ b/templates/project.html
@@ -146,19 +146,18 @@
                             {% if rec.question.spec.type == "module-set" %}
                               {{t.render_title}} &mdash;
                             {% endif %}
-                            {% if t.is_finished or not t.has_write_priv %}
-                              <a href="{{t.get_absolute_url}}">
+                            <a href="{{t.get_absolute_url}}">
+                            {% if t.is_finished %}
                                 <span class="glyphicon glyphicon-check"></span>
-                                Completed </a>
+                                Completed
                             {% elif t.is_started %}
-                              <a href="{{t.get_absolute_url}}">
                                 <span class="glyphicon glyphicon-edit"></span>
-                              In Progress </a>
+                              In Progress
                             {% else %}
-                              <a href="{{t.get_absolute_url}}">
                               <span class="glyphicon glyphicon-edit"></span>
-                              Viewed </a>
+                              Viewed
                             {% endif %}
+                            </a>
                           <!-- </a> -->
                         </div>
                       {% endfor %}
