--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -26,7 +26,7 @@ h1 { margin: 0; }
 
 <div id="project-name">
   {% if task.project %}
-    <h1><a href="{{task.project.get_absolute_url}}"><span class="glyphicon glyphicon-hdd"></span> {{task.project.title}}</a></h1>
+    <h1><a href="{{task.project.get_absolute_url}}"><span class="glyphicon glyphicon-hdd" style="color:rgb(19,144,50)"></span> {{task.project.title}}</a></h1>
   {% endif %}
   {% with supermodule=task.is_answer_to_unique %}
     {% if supermodule and supermodule.task != supermodule.project.root_task %}
