--- a/templates/new-project.html
+++ b/templates/new-project.html
@@ -7,9 +7,9 @@ New Project
 
 {% block body %}
 <div class="row">
-  <div class="col-sm-push-2 col-sm-8">
+  <div class="col-sm-push-1 col-sm-9">
 
-<h1 style="margin: 60px 0 30px 0">New Project</h1>
+<h1 style="margin: 60px 0 30px 0"><span class="glyphicon glyphicon-hdd" style="color:rgb(19,144,50)"></span> New Project</h1>
 
 <div style="margin: 30px 0">
   {% if first %}
