--- a/templates/home.html
+++ b/templates/home.html
@@ -7,14 +7,20 @@ Home
 {% block head %}
 <style>
 .project {
-  margin: 1em 0;
+  margin: 0em 0;
   /*background-color: #EEF;
   border-radius: 10px;
   padding: 15px;*/
+  border-top:1px solid rgb(240,240,240); 
+  padding: 8px 0px; 0px 4px;
 }
   .project a {
     font-weight: bold;
   }
+.project:hover{
+  background-color: rgb(250,250,250); 
+}
+
 </style>
 {% endblock %}
 
